# cognitive-temporal-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: FINDINGS.md  FUTURE_WORK.md  RESEARCH_SYNTHESIS.md  SESSION_LOG.md  THEORETICAL_FOUNDATION.md
docs/plans/: 2025-12-15-entropy-clock-design.md
scripts/: analyze_results.py  watch.py
src/: __init__.py
src/agents/: __init__.py  base_ppo.py  surnor_ppo.py  temporal_ppo.py
src/entropy_clock/: __init__.py  buffers.py  clock.py
src/experiments/: config.py  run_surnor.py  surnor_config.py  train.py
src/modulators/: __init__.py  exploration.py  learning_rate.py  pearce_hall_lr.py  replay.py
src/surprise/: __init__.py  forward_model.py  surprise_module.py  volatility_detector.py
src/visualization/: __init__.py  diagnostics.py
tests/: test_entropy_clock.py  test_pearce_hall_lr.py  test_surprise.py
