[project]
name = "cognitive-temporal-rl"
version = "0.1.0"
description = "Entropy-based internal clock for cognitive temporal experience in RL agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<2.5",
    "gymnasium[box2d]>=0.29.0",
    "stable-baselines3>=2.2.0",
    "tensorboard>=2.15.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
train = "src.experiments.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# Ensure compatibility with macOS x86_64
required-environments = ["sys_platform == 'darwin' and platform_machine == 'x86_64'"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
